# catkin_and_catkin_simple

./: CMakeLists.txt  package.xml
include/catkin_and_catkin_simple/: example-library.h
src/: example-library.cc  main.cc
