<?xml version="1.0"?>
<package>
  <name>catkin_and_catkin_simple</name>
  <version>0.0.1</version>
  <description>catkin_and_catkin_simple</description>

  <maintainer email="author@mavt.ethz.ch">Author</maintainer>
  <license>New BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  
  <!-- List dependencies to system libs and other catkin packages here. -->
  <build_depend>sm_common</build_depend>
</package>
